# cyton_gamma_1500_description

./: CMakeLists.txt  cyton_gamma_1500.rviz  cyton_gamma_1500.urdf  cyton_gamma_1500_macros.urdf.xacro  ist_cyton_gamma_1500_macros.urdf.xacro
meshes/: left_link_back.dae  mx-28-motor.dae  right_link_back.dae  shoulder_roll.dae  wrist.dae  wrist_roll.dae
meshes/arm/: elbow_yaw.dae  shoulder_pitch.dae  shoulder_yaw.dae
meshes/clone1_gripper/: Motor_+_Base.dae
meshes/gripper/: Motor_+_Base.dae  gear.dae  right_link_back.dae
meshes/gripper/clone1_gripper/: left_front_link.dae
meshes_backup/: left_front_link.dae  left_link_back.dae  mx-28-motor.dae  wrist.dae  wrist.dae.bkp
scripts/: joint_limit_generator.py
xacro/: clone1_ist_cyton_gamma_1500_macros.urdf.xacro  ist_cyton_gamma_1500.urdf.xacro  ist_cyton_gamma_1500_macros.urdf.xacro  ist_cyton_gamma_1500_macros.urdf.xacro.camera
